compiler-plugin/testData/diagnostics/pageMissingContext.kt
@ContributesComponent(appDependencies = FooPage.ServiceProvider::class)
class <!MISSING_CONTEXT_PARAMETER!>FooPage<!> : Page<Unit> {
    interface ServiceProvider
}
